re PR c++/65815 (brace elision doesn't work in NSDMI)

/cp
2015-06-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/65815
	* typeck2.c (digest_nsdmi_init): On aggregates use reshape_init.
	* init.c (expand_default_init): Likewise.

/testsuite
2015-06-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/65815
	* g++.dg/cpp0x/nsdmi-aggr1.C: New.
	* g++.dg/cpp0x/mem-init-aggr1.C: Likewise.

From-SVN: r224286